rate-limiting config updates

--- a/rauthy.cfg
+++ b/rauthy.cfg
@@ -287,8 +287,20 @@ DYN_CLIENT_CLEANUP_INTERVAL=60
 # The threshold should be specified in minutes. Any client, that has
 # not been used within this time after the registration will be
 # automatically deleted.
+#
+# Note: This scheduler will only run, if you have not set any
+# `DYN_CLIENT_REG_TOKEN`.
+#
 # default: 60
 DYN_CLIENT_CLEANUP_MINUTES=60
+
+# The rate-limiter timeout for dynamic client registration.
+# This is the timeout in seconds which will prevent an IP from
+# registering another dynamic client, if no `DYN_CLIENT_REG_TOKEN`
+# is set. With a `DYN_CLIENT_REG_TOKEN`, the rate-limiter will not
+# be applied.
+# default: 60
+DYN_CLIENT_RATE_LIMIT_SEC=60
 
 #####################################
 ############# E-MAIL ################
