--- a/rauthy.test.cfg
+++ b/rauthy.test.cfg
@@ -64,3 +64,5 @@ ENABLE_EPHEMERAL_CLIENTS=true
 ENABLE_WEBID=true
 ENABLE_SOLID_AUD=true
 EPHEMERAL_CLIENTS_ALLOWED_FLOWS="authorization_code refresh_token"
+
+ENABLE_DYN_CLIENT_REG=true
