update rauthy book with new config section

--- a/rauthy.cfg
+++ b/rauthy.cfg
@@ -254,7 +254,7 @@ DYN_CLIENT_REG_TOKEN="123SuperSafe"
 # This value can be modified manually after registration via
 # the Admin UI like for any other client.
 # default: 1800
-DYN_CLIENT_DEFAULT_TOKEN_LIFETIME=1800
+#DYN_CLIENT_DEFAULT_TOKEN_LIFETIME=1800
 
 # If set to 'true', client secret and registration token will be
 # automatically rotated each time a dynamic client updates itself
@@ -268,7 +268,7 @@ DYN_CLIENT_DEFAULT_TOKEN_LIFETIME=1800
 # control. If you cannot do anything about it, you might set this
 # value to 'false' to disable secret rotation.
 # default: true
-DYN_CLIENT_SECRET_AUTO_ROTATE=true
+#DYN_CLIENT_SECRET_AUTO_ROTATE=true
 
 # This scheduler will be running in the background, if
 # `ENABLE_DYN_CLIENT_REG=true`. It will auto-delete dynamic clients,
@@ -279,7 +279,7 @@ DYN_CLIENT_SECRET_AUTO_ROTATE=true
 #
 # The interval is specified in minutes.
 # default: 60
-DYN_CLIENT_CLEANUP_INTERVAL=60
+#DYN_CLIENT_CLEANUP_INTERVAL=60
 
 # The threshold for newly registered dynamic clients cleanup, if
 # not being used within this timeframe. This is a helper to keep
@@ -292,7 +292,7 @@ DYN_CLIENT_CLEANUP_INTERVAL=60
 # `DYN_CLIENT_REG_TOKEN`.
 #
 # default: 60
-DYN_CLIENT_CLEANUP_MINUTES=60
+#DYN_CLIENT_CLEANUP_MINUTES=60
 
 # The rate-limiter timeout for dynamic client registration.
 # This is the timeout in seconds which will prevent an IP from
@@ -300,7 +300,7 @@ DYN_CLIENT_CLEANUP_MINUTES=60
 # is set. With a `DYN_CLIENT_REG_TOKEN`, the rate-limiter will not
 # be applied.
 # default: 60
-DYN_CLIENT_RATE_LIMIT_SEC=60
+#DYN_CLIENT_RATE_LIMIT_SEC=60
 
 #####################################
 ############# E-MAIL ################
