update dev config for remote development

--- a/rauthy.cfg
+++ b/rauthy.cfg
@@ -683,13 +683,13 @@ LISTEN_PORT_HTTP=8080
 LISTEN_PORT_HTTPS=8443
 
 # The scheme to use locally, valid values: http | https | http_https (default: http_https)
-LISTEN_SCHEME=http
+LISTEN_SCHEME=http_https
 
 # The Public URL of the whole deployment
 # The LISTEN_SCHEME + PUB_URL must match the HTTP ORIGIN HEADER later on, which is especially important when running
 # rauthy behind a reverse proxy. In case of a non-standard port (80/443), you need to add the port to the PUB_URL
-PUB_URL=localhost:8080
-#PUB_URL=localhost:8443
+#PUB_URL=localhost:8080
+PUB_URL=192.168.14.50:8443
 
 # default value: number of available physical cores
 HTTP_WORKERS=1
