--- a/Cargo.toml
+++ b/Cargo.toml
@@ -47,6 +47,7 @@ ed25519-compact = { version = "2.0.4", features = ["ed25519"] }
 flume = "0.11"
 gethostname = "0.4"
 itertools = "0.12"
+serde_json_path = "0.6.7"
 jwt-simple = { version = "0.12.6", default-features = false, features = ["pure-rust"] }
 lazy_static = "1"
 num_cpus = "1"
@@ -57,7 +58,7 @@ rand = "0.8"
 rand_core = { version = "0.6", features = ["std"] }
 redhac = "0.9.0"
 regex = "1"
-reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
+reqwest = { version = "0.12.2", default-features = false, features = ["json", "rustls-tls"] }
 ring = "0.17"
 rio_api = "0.8.4"
 rio_turtle = "0.8.4"
