--- a/Cargo.toml
+++ b/Cargo.toml
@@ -37,6 +37,7 @@ askama = { version = "0.12", features = ["with-actix-web"] }
 askama_actix = "0.14"
 async-trait = "0.1.74"
 bincode = "1"
+cached = "0.49.2"
 chacha20poly1305 = { version = "0.10", features = ["std"] }
 chrono = { version = "0.4", default-features = false, features = ["clock", "serde", "std"] }
 cryptr = { version = "0.2", features = ["s3", "streaming"] }
@@ -46,6 +47,7 @@ dotenvy = "0.15"
 ed25519-compact = { version = "2.0.4", features = ["ed25519"] }
 flume = "0.11"
 gethostname = "0.4"
+http-serde = "1.1.3"
 itertools = "0.12"
 serde_json_path = "0.6.7"
 jwt-simple = { version = "0.12.6", default-features = false, features = ["pure-rust"] }
@@ -58,7 +60,8 @@ rand = "0.8"
 rand_core = { version = "0.6", features = ["std"] }
 redhac = "0.9.0"
 regex = "1"
-reqwest = { version = "0.12.2", default-features = false, features = ["json", "rustls-tls"] }
+# bump to 0.21. requires an update for the matrix sdk beforehand
+reqwest = { version = "0.11.27", default-features = false, features = ["json", "rustls-tls"] }
 ring = "0.17"
 rio_api = "0.8.4"
 rio_turtle = "0.8.4"
