--- a/rauthy-models/Cargo.toml
+++ b/rauthy-models/Cargo.toml
@@ -26,7 +26,7 @@ askama = { workspace = true }
 askama_actix = { workspace = true }
 async-trait = { workspace = true }
 bincode = { workspace = true }
-cached = "0.46"
+cached = { workspace = true }
 chrono = { workspace = true }
 cryptr = { workspace = true }
 css-color = { workspace = true }
@@ -38,7 +38,7 @@ futures-util = "0.3"
 hex = { version = "0.4", features = ["serde"] }
 hmac-sha256 = { version = "1.1.7", features = ["traits010"] }
 hmac-sha512 = { version = "1.1.5", features = ["traits010", "sha384"] }
-http-serde = "1.1.3"
+http-serde = { workspace = true }
 itertools = { workspace = true }
 jwt-simple = { workspace = true }
 lettre = { version = "0.11", default-features = false, features = ["builder", "smtp-transport", "tokio1-rustls-tls", "tracing"] }
@@ -61,6 +61,7 @@ rusty-s3 = { workspace = true }
 semver = { workspace = true }
 serde = { workspace = true }
 serde_json = { workspace = true }
+serde_json_path = { workspace = true }
 spow = { workspace = true }
 sqlx = { workspace = true }
 time = { workspace = true }
