--- a/rauthy.cfg
+++ b/rauthy.cfg
@@ -17,7 +17,7 @@ DEV_MODE=true
 # provider login while running the UI in dev mode. Point it to the
 # full address, where ever your UI is running.
 # This will only be respected when `DEV_MODE == true` as well.
-#DEV_MODE_PROVIDER_CALLBACK_URL="192.168.14.50:5173"
+#DEV_MODE_PROVIDER_CALLBACK_URL="localhost:5173"
 
 # Can be set to 'true' during local development to allow an HTTP scheme for the DPoP 'htu' claim
 # Will only be applied if `DEV_MODE == true` as well.
