--- a/rauthy.cfg
+++ b/rauthy.cfg
@@ -73,7 +73,7 @@ OPEN_USER_REG=true
 # deal with it later.
 #
 # default: false
-UNSAFE_NO_RESET_BINDING=true
+#UNSAFE_NO_RESET_BINDING=true
 
 #####################################
 ############# BACKUPS ###############
