--- a/rauthy-common/Cargo.toml
+++ b/rauthy-common/Cargo.toml
@@ -18,6 +18,7 @@ cryptr = { workspace = true }
 derive_more = { workspace = true }
 flume = { workspace = true }
 gethostname = { workspace = true }
+image = { workspcae = true }
 lazy_static = { workspace = true }
 once_cell = "1"
 rand = { workspace = true }
