adopt deploy config pointing to the correct path of the DEV TLS certs

--- a/rauthy.deploy.cfg
+++ b/rauthy.deploy.cfg
@@ -256,3 +256,42 @@ WEBAUTHN_RENEW_EXP=2160
 # Be careful with this option, since Android and some special combinations of OS + browser to not support UV yet.
 # (default: false)
 #WEBAUTHN_FORCE_UV=false
+
+#####################################
+############### TLS #################
+#####################################
+
+## Rauthy TLS
+
+# Overwrite the path to the TLS certificate file in PEM format for rauthy (default: tls/tls.crt)
+TLS_CERT=/app/tls/cert-chain.pem
+# Overwrite the path to the TLS private key file in PEM format for rauthy.
+# If the path / filename ends with '.der', rauthy will parse it as DER, otherwise as PEM.
+# (default: tls/tls.key)
+TLS_KEY=/app/tls/key.pem
+
+## CACHE TLS
+
+# Enable / disable TLS for the cache communication (default: true)
+CACHE_TLS=true
+
+# The path to the server TLS certificate PEM file
+# default: tls/redhac.cert-chain.pem
+CACHE_TLS_SERVER_CERT=/app/tls/cert-chain.pem
+# The path to the server TLS key PEM file
+# default: tls/redhac.key.pem
+CACHE_TLS_SERVER_KEY=/app/tls/key.pem
+
+# The path to the client mTLS certificate PEM file. This is optional.
+CACHE_TLS_CLIENT_CERT=/app/tls/cert-chain.pem
+# The path to the client mTLS key PEM file. This is optional.
+CACHE_TLS_CLIENT_KEY=/app/tls/key.pem
+
+# If not empty, the PEM file from the specified location will be
+# added as the CA certificate chain for validating
+# the servers TLS certificate. This is optional.
+CACHE_TLS_CA_SERVER=/app/tls/ca-chain.pem
+# If not empty, the PEM file from the specified location will
+# be added as the CA certificate chain for validating
+# the clients mTLS certificate. This is optional.
+CACHE_TLS_CA_CLIENT=/app/tls/ca-chain.pem
