--- a/rauthy-client/justfile
+++ b/rauthy-client/justfile
@@ -53,7 +53,7 @@ build:
     #!/usr/bin/env bash
     set -euxo pipefail
     # build as musl to make sure this works
-    cargo build --target x86_64-unknown-linux-musl
+    cross build --target x86_64-unknown-linux-musl
 
 
 # verifies the MSRV - Note: Currently, you cannot specify features for this -> add features to default beforehand
