--- a/Cargo.toml
+++ b/Cargo.toml
@@ -47,7 +47,6 @@ dotenvy = "0.15"
 ed25519-compact = { version = "2.0.4", features = ["ed25519"] }
 flume = "0.11"
 gethostname = "0.4"
-http-serde = "1.1.3"
 image = "0.25.1"
 itertools = "0.12"
 jwt-simple = { version = "0.12.6", default-features = false, features = ["pure-rust"] }
@@ -63,7 +62,7 @@ rand_core = { version = "0.6", features = ["std"] }
 redhac = "0.9.0"
 regex = "1"
 # bump to 0.21. requires an update for the matrix sdk beforehand
-reqwest = { version = "0.11.27", default-features = false, features = ["json", "rustls-tls"] }
+reqwest = { version = "0.12.3", default-features = false, features = ["json", "rustls-tls"] }
 ring = "0.17"
 rio_api = "0.8.4"
 rio_turtle = "0.8.4"
@@ -79,7 +78,8 @@ tracing = { version = "0.1", features = ["attributes"] }
 tracing-subscriber = { version = "0.3", features = ["env-filter", "tracing"] }
 tokio = { version = "1", features = ["full"] }
 utoipa = { version = "4", features = ["actix_extras", "chrono", "openapi_extensions"] }
-utoipa-swagger-ui = { version = "5", features = ["actix-web"] }
+utoipa-swagger-ui = { version = "6.0.0", features = ["actix-web"] }
+# v0.18 breaks quite a few things - sticking to 0.16 for now
 validator = { version = "0.16", features = ["derive"] }
 webauthn-rs = { version = "0.4", features = [
     "danger-allow-state-serialisation", "danger-credential-internals", "resident-key-support"
