--- a/rauthy-notify/Cargo.toml
+++ b/rauthy-notify/Cargo.toml
@@ -9,18 +9,7 @@ license.workspace = true
 async-trait = { workspace = true }
 chrono = { workspace = true }
 flume = { workspace = true }
-# we currently need to use the git version to resolve a conflict on zeroize
-# switch back to stable as soon as a new version comes out
-#matrix-sdk = { git = "https://github.com/sebadob/matrix-rust-sdk", branch = "rauthy-v0.17.0", default-features = false, features = [
-#    "e2e-encryption", "markdown", "rustls-tls"
-#] }
-matrix-sdk = { version = "0.7.1", default-features = false, features = [
-    "e2e-encryption", "markdown", "rustls-tls"
-] }
-# not selected -> produces libsqlite conflicts, which should not be pulled in by matrix-sdk in the first place
-#matrix-sdk = { git = "https://github.com/sebadob/matrix-rust-sdk", branch = "rauthy-v0.20.0", default-features = false, features = [
-#    "e2e-encryption", "markdown", "rustls-tls"
-#] }
+matrix-sdk = { workspace = true }
 rauthy-common = { path = "../rauthy-common" }
 reqwest = { workspace = true }
 serde = { workspace = true }
