remove some deprecated files and update to a good default rauthy.cfg

--- a/rauthy.cfg
+++ b/rauthy.cfg
@@ -713,7 +713,6 @@ LISTEN_SCHEME=http_https
 # The LISTEN_SCHEME + PUB_URL must match the HTTP ORIGIN HEADER later on, which is especially important when running
 # rauthy behind a reverse proxy. In case of a non-standard port (80/443), you need to add the port to the PUB_URL
 #PUB_URL=localhost:8080
-PUB_URL=192.168.14.50:8443
 
 # default value: number of available physical cores
 HTTP_WORKERS=1
@@ -815,6 +814,7 @@ CACHE_TLS_CLIENT_VALIDATE_DOMAIN=redhac.local
 RP_ID=localhost
 
 # Url containing the effective domain name (default: http://localhost:8080)
+# If you want to test Webauthn via the Svelte DEV UI, change the port number to :5173.
 # CAUTION: Must include the port number!
 RP_ORIGIN=http://localhost:8080
 #RP_ORIGIN=http://localhost:5173
