fix all tests and adopt the new values and DB migrations

--- a/rauthy.test.cfg
+++ b/rauthy.test.cfg
@@ -6,6 +6,8 @@
 # !!! DO NOT USE IN PRODUCTION !!!
 DEV_MODE=true
 
+RAUTHY_ADMIN_EMAIL="admin@localhost.de"
+
 # Limits the maximum amount of parallel password hashes at the exact same time to never exceed system memory while
 # still allowing a good amount of memory for the argon2id algorithm (default: 2)
 # Caution: You must make sure, that you have at least (MAX_HASH_THREADS * ARGON2_M_COST / 1024) + ~30 MB of memory
