--- a/Cargo.toml
+++ b/Cargo.toml
@@ -71,6 +71,7 @@ matrix-sdk = { version = "0.7.1", default-features = false, features = [
 mime = "0.3.17"
 mime_guess = "2"
 num_cpus = "1"
+once_cell = "1.19.0"
 ## Add openssl-sys as a direct dependency, so it can be cross compiled to
 ## x86_64-unknown-linux-musl using the "vendored" feature below
 openssl-sys = { version = "0.9", features = ["vendored"] }
