add tpl i18n overwrites to config + book

--- a/rauthy.cfg
+++ b/rauthy.cfg
@@ -17,7 +17,7 @@ DEV_MODE=true
 # provider login while running the UI in dev mode. Point it to the
 # full address, where ever your UI is running.
 # This will only be respected when `DEV_MODE == true` as well.
-#DEV_MODE_PROVIDER_CALLBACK_URL="localhost:5173"
+#DEV_MODE_PROVIDER_CALLBACK_URL="localhost:5173
 
 # Can be set to 'true' during local development to allow an HTTP scheme for the DPoP 'htu' claim
 # Will only be applied if `DEV_MODE == true` as well.
@@ -756,6 +756,54 @@ SWAGGER_UI_EXTERNAL=true
 # Depending on your network setup, proxy timeouts, ..., you may adjust this value to fit your needs.
 # default: 30
 #SSE_KEEP_ALIVE=30
+
+#####################################
+############ TEMPLATES ##############
+#####################################
+
+# You can overwrite some default email templating values here.
+# If you want to modify the basic templates themselves, this is
+# currently only possible with a custom build from source.
+# The content however can mostly be set here.
+# If the below values are not set, the default will be taken.
+
+# New Password E-Mail
+#TPL_EN_PASSWORD_NEW_SUBJECT="New Password"
+#TPL_EN_PASSWORD_NEW_HEADER="New password for"
+#TPL_EN_PASSWORD_NEW_TEXT=""
+#TPL_EN_PASSWORD_NEW_CLICK_LINK="Click the link below to get forwarded to the password form."
+#TPL_EN_PASSWORD_NEW_VALIDITY="This link is only valid for a short period of time for security reasons."
+#TPL_EN_PASSWORD_NEW_EXPIRES="Link expires:"
+#TPL_EN_PASSWORD_NEW_BUTTON="Set Password"
+#TPL_EN_PASSWORD_NEW_FOOTER=""
+
+#TPL_DE_PASSWORD_NEW_SUBJECT="Passwort Reset angefordert"
+#TPL_DE_PASSWORD_NEW_HEADER="Passwort Reset angefordert für"
+#TPL_DE_PASSWORD_NEW_TEXT=""
+#TPL_DE_PASSWORD_NEW_CLICK_LINK="Klicken Sie auf den unten stehenden Link für den Passwort Reset."
+#TPL_DE_PASSWORD_NEW_VALIDITY="Dieser Link ist aus Sicherheitsgründen nur für kurze Zeit gültig."
+#TPL_DE_PASSWORD_NEW_EXPIRES="Link gültig bis:"
+#TPL_DE_PASSWORD_NEW_BUTTON="Passwort Setzen"
+#TPL_DE_PASSWORD_NEW_FOOTER=""
+
+# Password Reset E-Mail
+#TPL_EN_RESET_SUBJECT="Neues Passwort"
+#TPL_EN_RESET_HEADER="Neues Passwort für"
+#TPL_EN_RESET_TEXT=""
+#TPL_EN_RESET_CLICK_LINK="Klicken Sie auf den unten stehenden Link um ein neues Passwort zu setzen."
+#TPL_EN_RESET_VALIDITY="This link is only valid for a short period of time for security reasons."
+#TPL_EN_RESET_EXPIRES="Link expires:"
+#TPL_EN_RESET_BUTTON="Reset Password"
+#TPL_EN_RESET_FOOTER=""
+
+#TPL_DE_RESET_SUBJECT="Passwort Reset angefordert"
+#TPL_DE_RESET_HEADER="Passwort Reset angefordert für"
+#TPL_DE_RESET_TEXT=""
+#TPL_DE_RESET_CLICK_LINK="Klicken Sie auf den unten stehenden Link für den Passwort Reset."
+#TPL_DE_RESET_VALIDITY="Dieser Link ist aus Sicherheitsgründen nur für kurze Zeit gültig."
+#TPL_DE_RESET_EXPIRES="Link gültig bis:"
+#TPL_DE_RESET_BUTTON="Passwort Zurücksetzen"
+#TPL_DE_RESET_FOOTER=""
 
 #####################################
 ############### TLS #################
