try to improve lsp freak out in clean environments

--- a/rauthy.cfg
+++ b/rauthy.cfg
@@ -214,8 +214,8 @@ CACHE_RECONNECT_TIMEOUT_UPPER=5000
 # schema: rauthy with owner rauthy
 #
 #DATABASE_URL=sqlite::memory:
-#DATABASE_URL=sqlite:data/rauthy.db
-#DATABASE_URL=postgresql://postgres:123SuperSafe@localhost:5432/rauthy
+DATABASE_URL=sqlite:data/rauthy.db
+DATABASE_URL_POSTGRES=postgresql://postgres:123SuperSafe@localhost:5432/rauthy
 
 # Max DB connections - irrelevant for SQLite (default: 5)
 #DATABASE_MAX_CONN=5
