invert the logic for the DB feature selection

--- a/rauthy-models/Cargo.toml
+++ b/rauthy-models/Cargo.toml
@@ -10,7 +10,8 @@ license.workspace = true
 doctest = false
 
 [features]
-sqlite = []
+default = []
+postgres = []
 
 [dependencies]
 accept-language = { workspace = true }
