--- a/rauthy-main/Cargo.toml
+++ b/rauthy-main/Cargo.toml
@@ -6,7 +6,8 @@ authors.workspace = true
 license.workspace = true
 
 [features]
-sqlite = []
+default = []
+postgres = []
 
 [dependencies]
 actix-web = { workspace = true }
