--- a/rauthy.test.cfg
+++ b/rauthy.test.cfg
@@ -6,6 +6,8 @@
 # !!! DO NOT USE IN PRODUCTION !!!
 DEV_MODE=true
 
+AUTH_HEADERS_ENABLE=true
+
 RAUTHY_ADMIN_EMAIL="admin@localhost.de"
 
 # Limits the maximum amount of parallel password hashes at the exact same time to never exceed system memory while
