make it possible to issue insecure cookies during local dev and testing

--- a/rauthy.cfg
+++ b/rauthy.cfg
@@ -8,6 +8,12 @@
 # !!! DO NOT USE IN PRODUCTION !!!
 DEV_MODE=true
 
+# Can be set to 'true' to build an insecure cookie for local testing.
+# This is only needed for Safari in local development, since
+# it does not treat localhost as a secure environment.
+# default: false
+DANGER_COOKIE_INSECURE=false
+
 # This will replace the redirect port for the auth provider
 # callback URI to make the login flow work, when the UI is running
 # in dev mode. Without this set, the redirect URI will always be
