add `SSP_THRESHOLD` config var

--- a/rauthy.cfg
+++ b/rauthy.cfg
@@ -786,6 +786,13 @@ SWAGGER_UI_EXTERNAL=true
 # default: 30
 #SSE_KEEP_ALIVE=30
 
+# Dynamic server side pagination threshold
+# If the total users count exceeds this value, Rauthy will dynamically
+# change search and pagination for users in the Admin UI from client
+# side to server side to not have a degradation in performance.
+# default: 1000
+SSP_THRESHOLD=1000
+
 #####################################
 ############ TEMPLATES ##############
 #####################################
