fix bootstrap config typo

--- a/rauthy.cfg
+++ b/rauthy.cfg
@@ -171,7 +171,7 @@ BACKUP_RETENTION_LOCAL=24
 #RESTORE_BACKUP=s3:rauthy-0.20.0-20231220-1703243039.cryptr
 
 #####################################
-############# BOOSTRAP ##############
+############ BOOTSTRAP ##############
 #####################################
 
 # If set, the email of the default admin will be changed
