revert dev cfg changes after testing

--- a/rauthy.cfg
+++ b/rauthy.cfg
@@ -6,13 +6,13 @@
 # The default password for 'admin@localhost.de' is '123SuperSafe'
 # default: false
 # !!! DO NOT USE IN PRODUCTION !!!
-#DEV_MODE=true
+DEV_MODE=true
 
 # Can be set to 'true' to build an insecure cookie for local testing.
 # This is only needed for Safari in local development, since
 # it does not treat localhost as a secure environment.
 # default: false
-#DANGER_COOKIE_INSECURE=false
+DANGER_COOKIE_INSECURE=false
 
 # This will replace the redirect port for the auth provider
 # callback URI to make the login flow work, when the UI is running
@@ -176,7 +176,7 @@ BACKUP_RETENTION_LOCAL=24
 
 # If set, the email of the default admin will be changed
 # during the initialization of an empty production database.
-BOOTSTRAP_ADMIN_EMAIL="alfred@batcave.io"
+#BOOTSTRAP_ADMIN_EMAIL="alfred@batcave.io"
 
 # If set, this plain text password will be used for the
 # initial admin password instead of generating a random
@@ -188,7 +188,7 @@ BOOTSTRAP_ADMIN_EMAIL="alfred@batcave.io"
 # If both BOOTSTRAP_ADMIN_PASSWORD_PLAIN and
 # BOOTSTRAP_ADMIN_PASSWORD_ARGON2ID are set, the hashed version
 # will always be prioritized.
-BOOTSTRAP_ADMIN_PASSWORD_ARGON2ID='$argon2id$v=19$m=32768,t=3,p=2$mK+3taI5mnA+Gx8OjjKn5Q$XsOmyvt9fr0V7Dghhv3D0aTe/FjF36BfNS5QlxOPep0'
+#BOOTSTRAP_ADMIN_PASSWORD_ARGON2ID='$argon2id$v=19$m=32768,t=3,p=2$mK+3taI5mnA+Gx8OjjKn5Q$XsOmyvt9fr0V7Dghhv3D0aTe/FjF36BfNS5QlxOPep0'
 
 #####################################
 ############## CACHE ################
