impl API Key bootstrapping

--- a/rauthy.cfg
+++ b/rauthy.cfg
@@ -6,7 +6,7 @@
 # The default password for 'admin@localhost.de' is '123SuperSafe'
 # default: false
 # !!! DO NOT USE IN PRODUCTION !!!
-DEV_MODE=true
+#DEV_MODE=true
 
 # Can be set to 'true' to build an insecure cookie for local testing.
 # This is only needed for Safari in local development, since
