fix tests after password reset form mgiration

--- a/rauthy.test.cfg
+++ b/rauthy.test.cfg
@@ -8,6 +8,8 @@ DEV_MODE=true
 
 AUTH_HEADERS_ENABLE=true
 
+PASSWORD_RESET_COOKIE_BINDING=true
+
 RAUTHY_ADMIN_EMAIL="admin@localhost.de"
 
 # Limits the maximum amount of parallel password hashes at the exact same time to never exceed system memory while
