additional flow and db design notes

--- a/rauthy.cfg
+++ b/rauthy.cfg
@@ -340,6 +340,27 @@ DATABASE_URL_POSTGRES=postgresql://rauthy:123SuperSafe@localhost:5432/rauthy
 #SCHED_USER_EXP_DELETE_MINS=7200
 
 #####################################
+######### Device Grant ##############
+#####################################
+
+# You can optionally specify a list of tokens separated by `\n`
+# with valid tokens for the Device Authorization Grant flow.
+# If defined, a token of this list must be sent with the initial
+# device registration request in the parameter with the name `token`.
+# This parameter is non-standard and not defined in the RFC 8628.
+# This means you can (and should) use it, if you control your device,
+# for instance your own IoT devices. For compatibility with existing
+# systems, you would want to stick to the rate limiting below.
+DEVICE_GRANT_TOKEN="
+superSafeToken1
+superSafeToken2
+"
+
+# This value defines the rate limiting for the Device Authorization Grant
+# flow for new registrations.
+DEVICE_GRANT_RATE_LIMIT_SECONDS=30
+
+#####################################
 ############## DPOP #################
 #####################################
 
