impl rate-limiting for device-flow requests to prevent DoS attack vector

--- a/rauthy.cfg
+++ b/rauthy.cfg
@@ -340,7 +340,7 @@ DATABASE_URL_POSTGRES=postgresql://rauthy:123SuperSafe@localhost:5432/rauthy
 #SCHED_USER_EXP_DELETE_MINS=7200
 
 #####################################
-######### Device Grant ##############
+######### DEVICE GRANT ##############
 #####################################
 
 # The upper maximum limit of concurrently existing Device Authorization
@@ -363,6 +363,14 @@ DEVICE_GRANT_CODE_LIFETIME=300
 # auth request validation. This must be < 64 characters.
 # default: 8
 DEVICE_GRANT_USER_CODE_LENGTH=8
+
+# Specifies the rate-limit in seconds per IP for starting new Device
+# Authorization Grant flows. This is especially important for public
+# clients, because a code request for this flow will actually create
+# cached data. If this would happen on an unrestricted, open endpoint,
+# the application could easily be DoS'ed.
+# default: 30
+DEVICE_GRANT_RATE_LIMIT=30
 
 #####################################
 ############## DPOP #################
