new config vars to configure refresh token lifetimes globally

--- a/rauthy.cfg
+++ b/rauthy.cfg
@@ -377,6 +377,13 @@ DEVICE_GRANT_RATE_LIMIT=30
 # default: 5
 DEVICE_GRANT_POLL_INTERVAL=5
 
+# You can define a global lifetime in hours for refresh tokens issued
+# from a Device Authorization Grant flow. You might want to have a
+# higher lifetime than normal refresh tokens, because they might be
+# used in IoT devices which may be offline for longer periods of time.
+# default: 72
+DEVICE_GRANT_REFRESH_TOKEN_LIFETIME=72
+
 #####################################
 ############## DPOP #################
 #####################################
@@ -761,6 +768,10 @@ EVENT_LEVEL_FAILED_LOGIN=info
 # Caching is done on the endpoint itself, but grace time of 0 will only be good for a single instance of rauthy.
 # default: 5
 REFRESH_TOKEN_GRACE_TIME=5
+
+# Global default lifetime in hours for refresh tokens.
+# default: 48
+REFRESH_TOKEN_LIFETIME=48
 
 # Lifetime for offline tokens in hours (default: 720)
 OFFLINE_TOKEN_LIFETIME=720
