update config doc for `DEVICE_GRANT_RATE_LIMIT`

--- a/rauthy.cfg
+++ b/rauthy.cfg
@@ -369,8 +369,10 @@ DEVICE_GRANT_USER_CODE_LENGTH=8
 # clients, because a code request for this flow will actually create
 # cached data. If this would happen on an unrestricted, open endpoint,
 # the application could easily be DoS'ed.
-# default: 30
-DEVICE_GRANT_RATE_LIMIT=30
+# If you use the `device_code` grant with confidential clients only,
+# you can leave this unset, which will not rate-limit the endpoint.
+# default: not set
+DEVICE_GRANT_RATE_LIMIT=1
 
 # The interval in seconds which devices are told to use when they
 # poll the token endpoint during Device Authorization Grant flow.
