--- a/rauthy-client/Cargo.toml
+++ b/rauthy-client/Cargo.toml
@@ -24,6 +24,7 @@ axum = [
     "dep:elliptic-curve",
 ]
 device-code = []
+qrcode = ["device-code", "dep:qrcode"]
 
 [dependencies]
 # common
@@ -53,6 +54,7 @@ axum = { version = "0.7", optional = true, features = [] }
 axum-extra = { version = "0.9", optional = true, features = ["cookie", "typed-header"] }
 
 # device-code
+qrcode = { version = "0.14.0", optional = true }
 
 # make minimal versions happy
 elliptic-curve = { version = "0.13.8", optional = true }
