--- a/rauthy-client/examples/device-code/Cargo.toml
+++ b/rauthy-client/examples/device-code/Cargo.toml
@@ -6,12 +6,5 @@ authors = ["Sebastian Dobe <sebastiandobe@mailbox.org>"]
 license = "Apache-2.0"
 
 [dependencies]
-#anyhow = "1.0.75"
-#axum = { version = "0.7.1", features = ["http2"] }
-#axum-extra = { version = "0.9.0", features = ["cookie"] }
-dotenvy = "0.15.7"
 tokio = { version = "1.34.0", features = ["full"] }
-#tracing = "0.1.40"
-#tracing-subscriber = { version = "0.3.18", features = ["tracing"] }
-
-rauthy-client = { path = "../..", features = ["device-code"] }
+rauthy-client = { path = "../..", features = ["device-code", "qrcode"] }
