new config var `USERINFO_STRICT` for stricter, additional `/userinfo` validation

--- a/rauthy.cfg
+++ b/rauthy.cfg
@@ -38,6 +38,19 @@ DEV_DPOP_HTTP=true
 # (default: false)
 OPEN_USER_REG=true
 
+# If set to true, the `/userinfo` endpoint will do additional validations.
+# The non-strict mode will fetch the user by id from the `sub` claim and make
+# sure it still exists and is enabled. The strict validation will do additional
+# database fetches and validates every possible value.
+# Additionally, it will look up a possibly linked user device from the `did` claim
+# and make sure it still exists. It will also extract the `client_id` the token
+# has been originally issued for from the `azp` claim, fetch it and make sure it
+# still exists and is enabled.
+# If you don't need the extra validations, you can set this to `false` to
+# save some resources, if your clients to a lot of `/userinfo` lookups.
+# default: true
+USERINFO_STRICT=true
+
 # Can be used when 'OPEN_USER_REG=true' to restrict the domains for a registration. For instance, set it to
 # 'USER_REG_DOMAIN_RESTRICTION=gmail.com' to allow only registrations with 'user@gmail.com'.
 # default: ''
