disable `webid` in the default dev config -> most people will not use it

--- a/rauthy.cfg
+++ b/rauthy.cfg
@@ -23,7 +23,7 @@ DANGER_COOKIE_INSECURE=false
 # provider login while running the UI in dev mode. Point it to the
 # full address, where ever your UI is running.
 # This will only be respected when `DEV_MODE == true` as well.
-#DEV_MODE_PROVIDER_CALLBACK_URL="localhost:5173
+#DEV_MODE_PROVIDER_CALLBACK_URL="localhost:5173"
 
 # Can be set to 'true' during local development to allow an HTTP scheme for the DPoP 'htu' claim
 # Will only be applied if `DEV_MODE == true` as well.
@@ -620,7 +620,7 @@ ENABLE_EPHEMERAL_CLIENTS=true
 # Can be set to 'true' to enable WebID functionality like needed
 # for things like Solid OIDC.
 # default: false
-ENABLE_WEB_ID=true
+#ENABLE_WEB_ID=true
 
 # If set to 'true', 'solid' will be added to the 'aud' claim from the ID token
 # for ephemeral clients.
