--- a/rauthy.cfg
+++ b/rauthy.cfg
@@ -872,7 +872,7 @@ LISTEN_PORT_HTTP=8080
 LISTEN_PORT_HTTPS=8443
 
 # The scheme to use locally, valid values: http | https | http_https (default: http_https)
-LISTEN_SCHEME=http_https
+LISTEN_SCHEME=http
 
 # The Public URL of the whole deployment
 # The LISTEN_SCHEME + PUB_URL must match the HTTP ORIGIN HEADER later on, which is especially important when running
