--- a/Cargo.toml
+++ b/Cargo.toml
@@ -74,7 +74,8 @@ num_cpus = "1"
 once_cell = "1.19.0"
 ## Add openssl-sys as a direct dependency, so it can be cross compiled to
 ## x86_64-unknown-linux-musl using the "vendored" feature below
-openssl-sys = { version = "0.9", features = ["vendored"] }
+openssl = { version = "0.10.64", features = ["vendored"] }
+openssl-sys = { version = "0.9.102", features = ["vendored"] }
 oxiri = "0.2.2"
 prometheus = "0.13.3"
 rand = "0.8"
@@ -111,3 +112,19 @@ webauthn-rs = { version = "0.5", features = [
     "danger-allow-state-serialisation", "danger-credential-internals"
 ] }
 webauthn-rs-proto = "0.5"
+
+# configure openssl deps to make cross-compiling webauthn-rs work
+[workspace.metadata.cross.target.x86_64-unknown-linux-musl]
+# Install libssl-dev:arm64, see <https://github.com/cross-rs/cross/blob/main/docs/custom_images.md#adding-dependencies-to-existing-images>
+#    "dpkg --add-architecture $CROSS_DEB_ARCH",
+pre-build = [
+    "apt update && apt install -y build-essential checkinstall zlib1g-dev",
+    "curl -LO https://github.com/openssl/openssl/releases/download/openssl-3.3.0/openssl-3.3.0.tar.gz",
+    "tar xvf openssl-3.3.0.tar.gz",
+    "cd openssl-3.3.0",
+    "./config",
+    "make",
+    "make test",
+    "make install",
+    "sudo ldconfig",
+]
