--- a/rauthy-models/Cargo.toml
+++ b/rauthy-models/Cargo.toml
@@ -47,6 +47,7 @@ mime = { workspace = true }
 num_cpus = { workspace = true }
 ## Add openssl-sys as a direct dependency, so it can be cross compiled to
 ## x86_64-unknown-linux-musl using the "vendored" feature below
+openssl = { workspace = true }
 openssl-sys = { workspace = true }
 once_cell = { workspace = true }
 rand = { workspace = true }
