--- a/rauthy.cfg
+++ b/rauthy.cfg
@@ -8,6 +8,12 @@
 # !!! DO NOT USE IN PRODUCTION !!!
 DEV_MODE=true
 
+# This value must be set for local development.
+# If must contain the public ip of the current host to make the
+# connection between the docker containers exposed on the host network
+# work properly. By default this is not set.
+#DEV_HOST=192.168.14.50
+
 # Can be set to 'true' to build an insecure cookie for local testing.
 # This is only needed for Safari in local development, since
 # it does not treat localhost as a secure environment.
@@ -327,8 +333,7 @@ CACHE_RECONNECT_TIMEOUT_UPPER=5000
 # schema: rauthy with owner rauthy
 #
 #DATABASE_URL=sqlite::memory:
-DATABASE_URL=sqlite:data/rauthy.db
-DATABASE_URL_POSTGRES=postgresql://rauthy:123SuperSafe@localhost:5432/rauthy
+#DATABASE_URL=sqlite:data/rauthy.db
 
 # Max DB connections - irrelevant for SQLite (default: 5)
 #DATABASE_MAX_CONN=5
@@ -504,7 +509,7 @@ EMAIL_SUB_PREFIX="Rauthy IAM"
 # TLS fails. It will never allow an unencrypted connection.
 # You might want to set `SMTP_DANGER_INSECURE=true` if you
 # need this for local dev.
-#SMTP_URL=
+SMTP_URL=localhost
 #SMTP_USERNAME=
 #SMTP_PASSWORD=
 # Format: "Rauthy <rauthy@localhost.de>"
@@ -872,12 +877,12 @@ LISTEN_PORT_HTTP=8080
 LISTEN_PORT_HTTPS=8443
 
 # The scheme to use locally, valid values: http | https | http_https (default: http_https)
-LISTEN_SCHEME=http
+LISTEN_SCHEME=http_https
 
 # The Public URL of the whole deployment
 # The LISTEN_SCHEME + PUB_URL must match the HTTP ORIGIN HEADER later on, which is especially important when running
 # rauthy behind a reverse proxy. In case of a non-standard port (80/443), you need to add the port to the PUB_URL
-#PUB_URL=localhost:8080
+#PUB_URL=localhost:8443
 
 # default value: number of available physical cores
 HTTP_WORKERS=1
