convert default app `Dockerfile` into buildx multi-stage

--- a/.dockerignore
+++ b/.dockerignore
@@ -1,8 +1,13 @@
+.devcontainer
+.github
+.sqlx
 .idea
-tests
-data
-.env
-.env.test
 .gitignore
-README.md
+
+docs
+frontend
+postgres
+rauthy-book
+rauthy-client
 target
+README.md
