update the description for `DEV_HOST`

--- a/rauthy.cfg
+++ b/rauthy.cfg
@@ -12,6 +12,10 @@ DEV_MODE=true
 # If must contain the public ip of the current host to make the
 # connection between the docker containers exposed on the host network
 # work properly. By default this is not set.
+#
+# CAUTION: This does NOT work with `localhost`. It must be the public IP
+# of your current machine!
+# Set this variable in a `.env` file.
 #DEV_HOST=192.168.14.50
 
 # Can be set to 'true' to build an insecure cookie for local testing.
