--- a/rauthy-client/justfile
+++ b/rauthy-client/justfile
@@ -33,10 +33,12 @@ check: clippy-examples
     cargo +nightly clippy -- -D warnings
     cargo +nightly clippy --features actix-web -- -D warnings
     cargo +nightly clippy --features axum -- -D warnings
+    cargo +nightly clippy --features device-code -- -D warnings
 
     cargo minimal-versions check
     cargo minimal-versions check --features actix-web
     cargo minimal-versions check --features axum
+    cargo minimal-versions check --features device-code
 
 
 # runs the full set of tests
