--- a/rauthy-client/examples/axum/Cargo.toml
+++ b/rauthy-client/examples/axum/Cargo.toml
@@ -14,4 +14,4 @@ tokio = { version = "1.34.0", features = ["full"] }
 tracing = "0.1.40"
 tracing-subscriber = { version = "0.3.18", features = ["tracing"] }
 
-rauthy-client = { path = "../..", features = ["axum"] }
+rauthy-client = { path = "../..", features = ["axum", "userinfo"] }
