add new config var `BLACKLIST_SUSPICIOUS_REQUESTS`

--- a/rauthy.cfg
+++ b/rauthy.cfg
@@ -124,6 +124,14 @@ AUTH_HEADER_GIVEN_NAME=x-forwarded-user-given-name
 # default: x-forwarded-user-mfa
 AUTH_HEADER_MFA=x-forwarded-user-mfa
 
+# The "catch all" route handler on `/` will compare the request path
+# against a hardcoded list of common scan targets from bots and attackers.
+# If the path matches any of these targets, the IP will be blacklisted
+# preemptively for the set time in minutes.
+# You can disable it with setting it to `0`.
+# default: 1440
+BLACKLIST_SUSPICIOUS_REQUESTS=1440
+
 #####################################
 ############# BACKUPS ###############
 #####################################
