--- a/rauthy.cfg
+++ b/rauthy.cfg
@@ -118,21 +118,21 @@ AUTH_HEADER_GIVEN_NAME=x-forwarded-user-given-name
 # default: x-forwarded-user-mfa
 AUTH_HEADER_MFA=x-forwarded-user-mfa
 
-# You can set different security levels for Rauthy's cookie.
-# The safest option would be 'host', but may not be desireable when
+# You can set different security levels for Rauthy's cookies.
+# The safest option would be 'host', but may not be desirable when
 # you host an application on the same origin behind a reverse proxy.
 # In this case you might want to restrict to 'secure', which will then
 # take the COOKIE_PATH from below into account.
 # The last option is 'danger-insecure' which really should never be used
 # unless you are just testing on localhost on you are using Safari.
-COOKIE_MODE=host
+#COOKIE_MODE=host
 
 # If set to 'true', Rauthy will bind the cookie to the `/auth` path.
 # You may want to change this only for very specific reasons and if
 # you are in such a situation, where you need this, you will know it.
 # Otherwise don't change this value.
 # default: true
-COOKIE_SET_PATH=false
+#COOKIE_SET_PATH=true
 
 # The "catch all" route handler on `/` will compare the request path
 # against a hardcoded list of common scan targets from bots and attackers.
